=== master

* Speed up row fetching in the sqlite adapter (jeremyevans)

* Speed up row fetching and type conversion in the sqlanywhere adapter (jeremyevans)

=== 5.18.0 (2019-03-01)

* Use singleton .call methods on plain objects instead of procs/methods for faster type conversion (jeremyevans)

* Add Sequel::SQL::Blob.call to avoid indirection when converting values from the database (jeremyevans)

* Use while instead of each for inner loops in sqlite and jdbc adapters for better performance (jeremyevans)

* Make after_initialize plugin not make the argument to Model.call optional (jeremyevans)

* Allow Dataset#paged_each to be called without a block in the postgres and mysql2 adapters (jeremyevans)

* Remove flow-control exceptions in connection_expiration and connection_validator extensions (jeremyevans)

* Add throw_failures plugin for throwing ValidationFailed and HookFailed exceptions instead of raising them, up to 10x performance increase on JRuby (jeremyevans)

* Support tzinfo 2 in addition to tzinfo 1 in the named_timezones extension (jeremyevans) (#1596)

=== 5.17.0 (2019-02-01)

* Support skip_auto_validations instance method in auto_validations plugin (oldgreen, jeremyevans) (#1592)

* Support :preconnect_extensions Database option for loading extensions before :preconnect option (jeremyevans)

* Avoid usage of Proc.new with implicit block as ruby 2.7+ deprecates this behavior (jeremyevans)

* Allow Sequel[].as to be used for constructing aliases with eager_graph (e.g. Model.eager_graph(Sequel[:a].as(:b))) (jeremyevans) (#1588)

=== 5.16.0 (2019-01-02)

* Convert integer columns to bigint columns when copying SQLite databases to other databases using bin/sequel -C (jeremyevans) (#1584)

* Use nicer error messages for missing or empty migration directories (Lavode) (#1585)

* Make alter table emulation work correctly in SQLite 3.26.0+ (jeremyevans) (#1582)
